# Image-editor

./: .cursorrules  .dockerignore  .gitignore  Dockerfile  Dockerfile.prod  Dockerfile.wasm  README.md  build-wasm.sh  deploy.sh  docker-compose.prod.yml  docker-compose.yml  next.config.mjs  nginx.conf  package.json  watch-and-copy.sh  watch-cpp.sh  watch_cpp_folder.py
cpp/: CMakeLists.txt  brightness.cpp  counter.cpp  filters.cpp  hello.cpp  js.cpp  main.cpp
public/wasm/: hello.js
src/app/: globals.css  layout.tsx  page.tsx
src/app/components/: LandingPage.tsx  WasmHello.tsx
src/app/editor/: page.tsx
src/components/: ErrorState.tsx  FullscreenImageViewer.tsx  LoadingState.tsx  providers.tsx
src/components/fullscreen-viewer/: constants.ts  index.tsx  types.ts
src/components/fullscreen-viewer/components/: ColorAdjustmentsSection.tsx  DebugMenu.tsx  DownloadPanel.tsx  EditPanel.tsx  EditPanelHeader.tsx  FilterControl.tsx  FiltersSection.tsx  ImageControls.tsx  MonochromeToggle.tsx  index.ts
src/components/fullscreen-viewer/hooks/: useImageFilters.ts  useImageProcessing.ts  useImageProcessor.ts  useImageViewer.ts  usePanelDrag.ts
src/components/fullscreen-viewer/utils/: panelConstraints.ts
src/components/ui/: separator.tsx  switch.tsx  theme-toggle.tsx
src/contexts/: WasmContext.tsx
